src/styles/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

#root {
  display: flex;
  justify-content: center;
  max-height: 100vh;
  max-width: 100vw;
}

.App {
  min-width: 1000px;
  min-height: 100%;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  height: 100vh;
  background: linear-gradient(
    to right,
    #e7e5e4 0%,
    #e7e5e4 25%,
    #f4f4f5 0%,
    #f4f4f5 100%
    );
}

/* Header */
.header {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  z-index: 5;
  margin-top: 2rem;
}

.name-div, .profession-div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.name-div {
  display: flex;
  gap: 1rem;
  height: 5rem;
  font-size: 4rem;
  font-weight: 500;
  padding: 1rem 1rem;

  background-color: rgba(255, 237, 42, 0.9);
}

.profession-div {
  display: flex;
  gap: 1rem;
  height: 3.5rem;
  font-size: 1.5rem;
  font-weight: 300;

  background-color: rgba(39, 39, 42, 0.9);
  color: white;
  letter-spacing: 0.1rem;
}

.name, .profession {
  display: flex;
}

/* Sidebar */
.sidebar-div {
  width: 21.6%;
  height: 76.1%;
  padding: 1rem 1rem;
  border: 1px solid red;
}

/* Contact Info */
.contact-info-div {
  padding-top: 2rem;
}

.contact-info {
  display: flex;
  height: 2.5rem;
  gap: 1rem;

  border-bottom: 1px solid black;
}

.location-div {
  border-top: 1px solid black;
}

.contact-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 2.5rem;
  height: 100%;
  
  background-color: rgb(246, 230, 56);
}

.linkedIn-svg {
  width: 1rem;
}

.contact-text {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-size: 0.8rem;
  gap: 0.2rem;
  flex: 1;
}

/* Edit icon */
.fa-pen-to-square {
  color: transparent;
  height: 2rem;
}

.edit-icon-div {
  display: flex;
  cursor: pointer;
}

.contact-edit-icon {
  height: 1rem;
}

/* Hover icon effect  */
.name-div:hover .name-edit-icon {
  color: rgb(210, 205, 173); 
 }

.profession-div:hover .profession-edit-icon {
  color: rgb(112, 112, 112);
}

.location-text:hover .location-edit-icon {
  color: rgb(112, 112, 112);
}

 .hidden {
  color: transparent;
 }

 /* Input */
 .edit-name, .edit-profession, .edit-location {
  all: unset;
}

.contact-edit {
  text-align: left;
}

